ccg_bot_sys/src/tests/nonstable_fail_non_str_issue.stderr
error: custom attribute panicked
 --> src/tests/nonstable_fail_non_str_issue.rs:3:1
  |
3 | #[nonstable(issue = 1)]
  | ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: explicit panic

error[E0425]: cannot find value `NONSTABLE_STATIC_WITH_NON_STR_ISSUE` in this scope
 --> src/tests/nonstable_fail_non_str_issue.rs:7:13
  |
7 |     let _ = NONSTABLE_STATIC_WITH_NON_STR_ISSUE;
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
